k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spacelaunchnow-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
  - hosts:
    - api.spacelaunchnow.me
    - spacelaunchnow.me
    secretName: spacelaunchnow-tls
  rules:
  - host: "spacelaunchnow.me"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: sln-prod-app-django-web
              port:
                number: 8080
  - host: "api.spacelaunchnow.me"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: sln-prod-app-django-web
              port:
                number: 8080
