k8s/ingress/web_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
      cert-manager.io/cluster-issuer: "le-global-issuer"
      kubernetes.io/tls-acme: "true"
      kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: sln-prod-app-django-web
      port:
        number: 8080
  tls:
  - hosts:
    - "api.spacelaunchnow.me"
    - "spacelaunchnow.me"
    secretName: sln-web-tls
  rules:
  - host: "api.spacelaunchnow.me"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: sln-prod-app-django-web
              port:
                number: 8080

  - host: "spacelaunchnow.me"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: sln-prod-app-django-web
              port:
                number: 8080
